--- a/index.html
+++ b/index.html
@@ -30,11 +30,18 @@
     </header>
     <div class="wrapper">
         <div id="feature">
-            HI! I AM JOSHUA MENDOZA<BR/>
-            PLEASE TAKE A LOOK AT MY WORK
+HI! I AM JOSHUA MENDOZA<BR/>
+PLEASE TAKE A LOOK AT MY WORK
         </div>
         
-        Emails
+        <div id="content">
+            <h3>Emails</h3>
+            <div id="box-container">
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+                <div class="content-box"></div>
+            </div>
+        </div>
     </div>
     <footer>&copy; 2016 JOSHUA MENDOZA ALL RIGHT RESERVED</footer>
     
