--- a/index.html
+++ b/index.html
@@ -36,14 +36,19 @@ PLEASE TAKE A LOOK AT MY WORK
         
         <div id="content">
             <h3>Emails</h3>
-            <div id="box-container">
-                <div class="content-box"></div>
-                <div class="content-box"></div>
-                <div class="content-box"></div>
+            <div class="box-container">
+                <div class="content-box"><a href="#">SUZUKI</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Suzuki/suzuki.png?raw=true" /></div>
+                <div class="content-box"><a href="#">CARLSBERG</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Carlsberg/carls.png?raw=true" /></div>
+                <div class="content-box"><a href="#">RBS</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/RBS/rbs.png?raw=true" /></div>
+            </div>
+            <br>
+            <h3>HTML5 Animation</h3>
+            <div class="box-container">
+                <div class="content-box"><a href="#">Wired.com:<br/>SPACE</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Suzuki/suzuki.png?raw=true" /></div>
             </div>
         </div>
     </div>
-    <footer>&copy; 2016 JOSHUA MENDOZA ALL RIGHT RESERVED</footer>
+    <footer>&copy; 2016 JOSHUA MENDOZA ALL RIGHTS RESERVED</footer>
     
     <script src="js/scripts.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
