--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Joshuwere's Portfolio</title>
+    <title>Joshua's Portfolio</title>
     <meta name="description" content="Joshua Mendoza's Portfolio">
     <meta name="author" content="Joshua Mendoza">
 
@@ -20,11 +20,11 @@
 <body>
     <header>
         <div class="wrapper">
-            <h1>Logo</h1>
+            <h1>Josh</h1>
             <ul>
-                <a href="#"><li>navigation 1</li></a>
-                <a href="#"><li>navigation 2</li></a>
-                <a href="#"><li>navigation 3</li></a>
+                <a href="#Emails"><li>Emails</li></a>
+                <a href="#Animation"><li>Animation</li></a>
+                <a href="mailto:joshua.j.mendoza@outlook.com" target="_blank"><li>Contact Me</li></a>
             </ul>
         </div>
     </header>
@@ -35,16 +35,16 @@ PLEASE TAKE A LOOK AT MY WORK
         </div>
         
         <div id="content">
-            <h3>Emails</h3>
+            <h3 id="Emails">Emails</h3>
             <div class="box-container">
-                <div class="content-box"><a href="#">SUZUKI</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Suzuki/suzuki.png?raw=true" /></div>
-                <div class="content-box"><a href="#">CARLSBERG</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Carlsberg/carls.png?raw=true" /></div>
-                <div class="content-box"><a href="#">RBS</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/RBS/rbs.png?raw=true" /></div>
+                <div class="content-box"><a href="http://design.google.com/resizer/#url=http%3A%2F%2Fpirateyoshi.github.io%2Fportfolio%2Ffolio%2Femails%2FSuzuki%2FSuzuki_Service_Promise.html">SUZUKI</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Suzuki/suzuki.png?raw=true" /></div>
+                <div class="content-box"><a href="http://design.google.com/resizer/#device=window&url=http%3A%2F%2Fpirateyoshi.github.io%2Fportfolio%2Ffolio%2Femails%2FCarlsberg%2FCarlsberg.html&width=840">CARLSBERG</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Carlsberg/carls.png?raw=true" /></div>
+                <div class="content-box"><a href="http://design.google.com/resizer/#url=https%3A%2F%2Fpirateyoshi.github.io%2Fportfolio%2Ffolio%2Femails%2FRBS%2FCore_Q3-Loan-Acquisition_RBS_template.html">RBS</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/RBS/rbs.png?raw=true" /></div>
             </div>
             <br>
-            <h3>HTML5 Animation</h3>
+            <h3 id="Animation">HTML5 Animation</h3>
             <div class="box-container">
-                <div class="content-box"><a href="#">Wired.com:<br/>SPACE</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Suzuki/suzuki.png?raw=true" /></div>
+                <div class="content-box"><a href="http://design.google.com/resizer/#url=https%3A%2F%2Fpirateyoshi.github.io%2FTests%2FWired_Banner%2Findex.html">Wired.com:<br/>SPACE</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/animation/wired.png?raw=true" /></div>
             </div>
         </div>
     </div>
