--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@ PLEASE TAKE A LOOK AT MY WORK
         <div id="content">
             <h3 id="Emails">Emails</h3>
             <div class="box-container">
-                <div class="content-box"><a href="http://design.google.com/resizer/#url=http%3A%2F%2Fpirateyoshi.github.io%2Fportfolio%2Ffolio%2Femails%2FSuzuki%2FSuzuki_Service_Promise.html">SUZUKI</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Suzuki/suzuki.png?raw=true" /></div>
-                <div class="content-box"><a href="http://design.google.com/resizer/#device=window&url=http%3A%2F%2Fpirateyoshi.github.io%2Fportfolio%2Ffolio%2Femails%2FCarlsberg%2FCarlsberg.html&width=840">CARLSBERG</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Carlsberg/carls.png?raw=true" /></div>
-                <div class="content-box"><a href="http://design.google.com/resizer/#url=https%3A%2F%2Fpirateyoshi.github.io%2Fportfolio%2Ffolio%2Femails%2FRBS%2FCore_Q3-Loan-Acquisition_RBS_template.html">RBS</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/RBS/rbs.png?raw=true" /></div>
+                <div class="content-box"><a href="http://design.google.com/resizer/#url=http%3A%2F%2Fpirateyoshi.github.io%2Fportfolio%2Ffolio%2Femails%2FSuzuki%2FSuzuki_Service_Promise.html" target="_blank">SUZUKI</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Suzuki/suzuki.png?raw=true" /></div>
+                <div class="content-box"><a href="http://design.google.com/resizer/#device=window&url=http%3A%2F%2Fpirateyoshi.github.io%2Fportfolio%2Ffolio%2Femails%2FCarlsberg%2FCarlsberg.html&width=840" target="_blank">CARLSBERG</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/Carlsberg/carls.png?raw=true" /></div>
+                <div class="content-box"><a href="http://design.google.com/resizer/#url=https%3A%2F%2Fpirateyoshi.github.io%2Fportfolio%2Ffolio%2Femails%2FRBS%2FCore_Q3-Loan-Acquisition_RBS_template.html" target="_blank">RBS</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/emails/RBS/rbs.png?raw=true" /></div>
             </div>
             <br>
             <h3 id="Animation">HTML5 Animation</h3>
             <div class="box-container">
-                <div class="content-box"><a href="http://design.google.com/resizer/#url=https%3A%2F%2Fpirateyoshi.github.io%2FTests%2FWired_Banner%2Findex.html">Wired.com:<br/>SPACE</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/animation/wired.png?raw=true" /></div>
+                <div class="content-box"><a href="http://design.google.com/resizer/#url=https%3A%2F%2Fpirateyoshi.github.io%2FTests%2FWired_Banner%2Findex.html" target="_blank">Wired.com:<br/>SPACE</a><img src="https://github.com/PirateYoshi/portfolio/blob/gh-pages/folio/animation/wired.png?raw=true" /></div>
             </div>
         </div>
     </div>
